--- a/spring-playground/src/main/resources/static/player.html
+++ b/spring-playground/src/main/resources/static/player.html
@@ -1,3 +1,3 @@
-<video autoplay="autoplay">
-    <source src="/file">
+<video width="320" height="240" autoplay="autoplay" controls>
+    <source src="/file" type="video/mp4">
 </video>
